[package]
name = "wizard-tower"
version = "0.1.0"
edition = "2018"
authors = [ "Pablo Tato Ramos <pabtatoramos@gmail.com>" ]

[dependencies]
# anyhow = "1.0"
bevy = "0.5"
bevy-inspector-egui = "0.6"

rand = "0.7"
rand_chacha = "0.2"
noise = "0.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html